--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "Kevin Isom<kevin.isom@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "delay": "^2.0.0",
-    "jest-cli": "^22.1.4"
+    "@kev_nz/async-tools": "^1.2.1",
+    "jest": "^24.8.0"
   },
   "dependencies": {
-    "axios": "^0.17.1"
+    "axios": "^0.19.0"
   }
 }
